@@ -4,11 +4,9 @@ import com.Hackathon.src.model.Problem;
 import com.Hackathon.src.strategy.interfaces.ProblemFilterStrategy;
 
 import java.util.List;
-
-import static com.Hackathon.src.constants.AppConstant.FILTERING_BY_TAG;
+import java.util.stream.Collectors;
 
 public class TagFilterStrategyImpl implements ProblemFilterStrategy {
-
     private final String tag;
 
     public TagFilterStrategyImpl(String tag) {
@@ -17,12 +15,10 @@ public class TagFilterStrategyImpl implements ProblemFilterStrategy {
 
     @Override
     public List<Problem> filter(List<Problem> problems) {
-        System.out.println(FILTERING_BY_TAG + tag);
         return problems.stream()
-                .filter(p -> p.getTag().equalsIgnoreCase(tag)).toList();
+                .filter(p -> p.getTag().equalsIgnoreCase(tag))
+                .collect(Collectors.toList());
     }
 
-    public String getTag() {
-        return tag;
-    }
+    public String getTag() { return tag; }
 }
